--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Modal content -->
         <div class="modal-content">
-          <span class="close">&times;</span>
+          <button onclick="closeMod()" class="close">X</button>
           <br>
           <p id = "p-modal">test...</p>
         </div>
